# MMVE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WINDOWS_BUILD.md  build-windows-vst3.cmd
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
